# flaskapi

./: .gitignore  app.py  pyproject.toml  requirements.txt
flaskapi/: __init__.py  app.py  resources.py  schemas.py  websocket.py
flaskapi/templates/: index.html
flaskapi/templates/assets/: _name_.ffc4652a.js  index.13a15288.js  index.6e94500f.css  index.ca643c49.js
prisma/: dev.db  schema.prisma
tests/: test_flask_prisma_swagger.py
