[tool.poetry]
name = "flask_prisma_swagger"
version = "0.1.0"
description = ""
authors = ["Oscar Bahamonde <107950590+obahamonde@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = {extras = ["async"], version = "^2.2.2"}
prisma = "^0.7.1"
orjson = "^3.8.3"
Flask - SocketIO = "^5.3.2"
requests = "^2.28.1"

[tool.poetry.dev - dependencies]
pytest = "^5.2"
flake8 = "^6.0.0"
pylint = "^2.15.8"
autopep8 = "^2.0.0"

[build - system]
requires = ["poetry-core>=1.0.0"]
build - backend = "poetry.core.masonry.api"
